# vaulkeeper

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
assets/brand/: license.rtf  tokens.json
benchmarks/: CMakeLists.txt  bench_hash.cpp  bench_interner.cpp
cmake/: VkCompilerFlags.cmake  VkOptions.cmake  VkTargets.cmake  VkVersion.cmake  version.hpp.in
packaging/chocolatey/: vaulkeeper.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/scoop/: vaulkeeper.json
packaging/winget/: Vaulkeeper.Vaulkeeper.installer.yaml  Vaulkeeper.Vaulkeeper.locale.de-DE.yaml  Vaulkeeper.Vaulkeeper.locale.en-US.yaml  Vaulkeeper.Vaulkeeper.locale.es-ES.yaml  Vaulkeeper.Vaulkeeper.locale.fr-FR.yaml  Vaulkeeper.Vaulkeeper.locale.it-IT.yaml  Vaulkeeper.Vaulkeeper.yaml
scripts/: bootstrap.ps1  brand-placeholders.ps1  brand-render.ps1  build-installer.ps1  build-portable.ps1  lint-text.ps1  package.ps1  release.ps1  run-tests.ps1  sign.ps1
src/agent/: CMakeLists.txt  main.cpp
src/agent/elevated/: registry_ops.cpp  registry_ops.hpp  service.cpp  service.hpp
src/app/: CMakeLists.txt  main.cpp
src/app/ui/: command_palette.cpp  command_palette.hpp
src/app/ui/qml/: DuplicatesPage.qml  HealthPage.qml  HealthReportPage.qml  Main.qml  QuarantinePage.qml  RulesPage.qml  ScanPage.qml  UninstallPage.qml
src/app/ui/qml/components/: Card.qml  CommandPalette.qml  DataTable.qml  Heatmap.qml  LanguagePicker.qml  PrimaryButton.qml  ScanProgressBar.qml  Sidebar.qml  SnapshotTimeline.qml  Sunburst.qml  TopBar.qml  Treemap.qml  VolumeCard.qml
src/app/ui/resources/: fonts.qrc  icons.qrc
src/app/ui/resources/i18n/: vaulkeeper_de.ts  vaulkeeper_en.ts  vaulkeeper_es.ts  vaulkeeper_fr.ts  vaulkeeper_it.ts
src/app/ui/theme/: theme.cpp  theme.hpp
src/app/ui/viewmodels/: application_view_model.cpp  application_view_model.hpp  duplicates_view_model.cpp  duplicates_view_model.hpp  health_view_model.cpp  health_view_model.hpp  quarantine_view_model.cpp  quarantine_view_model.hpp  rules_view_model.cpp  rules_view_model.hpp  scan_view_model.cpp  scan_view_model.hpp  tree_node_model.cpp  tree_node_model.hpp  uninstall_view_model.cpp  uninstall_view_model.hpp
src/cli/: CMakeLists.txt  main.cpp
src/cli/commands/: command.cpp  command.hpp  duplicates_cmd.cpp  duplicates_cmd.hpp  health_cmd.cpp  health_cmd.hpp  quarantine_cmd.cpp  quarantine_cmd.hpp  report_cmd.cpp  report_cmd.hpp  rules_cmd.cpp  rules_cmd.hpp  scan_cmd.cpp  scan_cmd.hpp  uninstall_cmd.cpp  uninstall_cmd.hpp
src/core/: CMakeLists.txt
src/core/cleaners/: browser_cache_cleaner.cpp  browser_cache_cleaner.hpp  cleaner.hpp  cleaner_registry.cpp  cleaner_registry.hpp  crash_dump_cleaner.cpp  crash_dump_cleaner.hpp  dev_artifact_cleaner.cpp  dev_artifact_cleaner.hpp  recycle_bin_cleaner.cpp  recycle_bin_cleaner.hpp  temp_cleaner.cpp  temp_cleaner.hpp  thumbnail_cache_cleaner.cpp  thumbnail_cache_cleaner.hpp  windows_update_cleaner.cpp  windows_update_cleaner.hpp
src/core/config/: app_config.cpp  app_config.hpp  paths.cpp  paths.hpp
src/core/duplicates/: duplicate_finder.cpp  duplicate_finder.hpp
src/core/fs/: compression.cpp  compression.hpp  file_entry.hpp  path.cpp  path.hpp  reparse.cpp  reparse.hpp  secure_delete.cpp  secure_delete.hpp  volume.cpp  volume.hpp
src/core/hash/: blake3_hash.cpp  blake3_hash.hpp  phash.cpp  phash.hpp  xxhash3.cpp  xxhash3.hpp
src/core/health/: disk_health.cpp  disk_health.hpp
src/core/ipc/: message.cpp  message.hpp  pipe_client.cpp  pipe_client.hpp  pipe_server.cpp  pipe_server.hpp
src/core/journal/: journal.cpp  journal.hpp
src/core/lua/: lua_runtime.cpp  lua_runtime.hpp
src/core/plugin/: plugin_api.hpp  plugin_host.cpp  plugin_host.hpp
src/core/privacy/: sensitive_scanner.cpp  sensitive_scanner.hpp
src/core/quarantine/: quarantine.cpp  quarantine.hpp
src/core/rules/: rule.hpp  rule_engine.cpp  rule_engine.hpp  rule_parser.cpp  rule_parser.hpp
src/core/scan/: scan_cache.cpp  scan_cache.hpp  scan_engine.cpp  scan_engine.hpp  scan_options.hpp  scan_result.hpp  tree_model.cpp  tree_model.hpp
src/core/scheduler/: cron.cpp  cron.hpp  scheduler.cpp  scheduler.hpp
src/core/uninstall/: application.hpp  residue_scanner.cpp  residue_scanner.hpp  uninstaller.cpp  uninstaller.hpp
src/core/util/: bytes.hpp  error.cpp  error.hpp  event_bus.cpp  event_bus.hpp  logger.cpp  logger.hpp  macros.hpp  mpsc_queue.hpp  result.hpp  secure_string.cpp  secure_string.hpp  string_intern.cpp  string_intern.hpp  thread_pool.cpp  thread_pool.hpp  time.cpp  time.hpp
src/installer/: CMakeLists.txt  bundle.wxs  vaulkeeper.wxs
src/installer/loc/: de-de.wxl  (+4 more)
src/shellext/: CMakeLists.txt  class_factory.cpp  class_factory.hpp  context_menu.cpp  context_menu.hpp  dllmain.cpp  shellext.def
src/updater/: CMakeLists.txt  main.cpp  signature.cpp  signature.hpp  update_check.cpp  update_check.hpp
tests/: CMakeLists.txt
tests/fuzz/: fuzz_cron.cpp  fuzz_ipc.cpp  fuzz_mft.cpp  fuzz_rules.cpp
tests/integration/: test_quarantine_roundtrip.cpp  test_rule_execution.cpp  test_scan_pipeline.cpp
tests/perf/: perf_hash.cpp  perf_scan.cpp
tests/unit/cleaners/: test_dev_artifact_cleaner.cpp
tests/unit/duplicates/: test_duplicate_finder.cpp
tests/unit/fs/: test_compression.cpp  test_path.cpp  test_secure_delete.cpp
tests/unit/hash/: test_blake3.cpp  test_phash.cpp  test_xxhash3.cpp
tests/unit/ipc/: test_message.cpp
tests/unit/privacy/: test_sensitive_scanner.cpp
tests/unit/quarantine/: test_quarantine.cpp
tests/unit/rules/: test_rule_parser.cpp
tests/unit/scan/: test_tree_model.cpp
tests/unit/scheduler/: test_cron.cpp
tests/unit/uninstall/: test_residue_scanner.cpp
tests/unit/updater/: test_update_check.cpp
tests/unit/util/: test_bytes.cpp  test_mpsc_queue.cpp  test_secure_string.cpp  test_string_intern.cpp  test_thread_pool.cpp  test_time.cpp
vcpkg-triplets/: x64-windows-static-md.cmake  x64-windows.cmake
(+33 files in other folders)
